--- a/Proyecto/Servidor/pom.xml
+++ b/Proyecto/Servidor/pom.xml
@@ -3,50 +3,57 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <!-- Identificación del proyecto -->
   <groupId>org.example</groupId>
   <artifactId>TriviaServidorTCP</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <!-- Información general del proyecto -->
   <name>TriviaServidorTCP</name>
   <url>http://maven.apache.org</url>
 
+  <!-- Propiedades del proyecto -->
   <properties>
+    <!-- Codificación de caracteres para el proyecto -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- Versión de Java para compilar el código fuente -->
     <maven.compiler.source>11</maven.compiler.source>
+    <!-- Versión de Java objetivo para la compilación -->
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
+  <!-- Dependencias del proyecto -->
   <dependencies>
-    <!-- Hibernate Core -->
+    <!-- Hibernate Core - Framework ORM para mapeo objeto-relacional -->
     <dependency>
       <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>6.6.9.Final</version>
     </dependency>
 
-    <!-- MySQL Connector -->
+    <!-- MySQL Connector - Driver JDBC para conectar con base de datos MySQL -->
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
       <version>9.2.0</version>
     </dependency>
 
-    <!-- Jackson for JSON processing -->
+    <!-- Jackson Databind - Librería para procesamiento y conversión de JSON -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.16.0</version>
     </dependency>
 
-    <!-- Jackson Core -->
+    <!-- Jackson Core - Núcleo de la librería Jackson para procesamiento JSON -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>2.16.0</version>
     </dependency>
 
-    <!-- Jackson Annotations -->
+    <!-- Jackson Annotations - Anotaciones para personalizar serialización/deserialización JSON -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
@@ -54,14 +61,18 @@
     </dependency>
   </dependencies>
 
+  <!-- Configuración de construcción del proyecto -->
   <build>
     <plugins>
+      <!-- Plugin del compilador de Maven -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
+          <!-- Versión de Java para el código fuente -->
           <source>11</source>
+          <!-- Versión de Java objetivo para los archivos compilados -->
           <target>11</target>
         </configuration>
       </plugin>
